# Kestr

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  config_hybrid_test.json  install.sh  kestr.service
.github/workflows/: ci.yml
include/kestr/: sha256.h  types.hpp
src/: main.cpp  platform.hpp
src/client/: main.cpp
src/engine/: config.hpp  database.cpp  database.hpp  embedder.cpp  embedder.hpp  embedder_dummy.cpp  embedder_ollama.cpp  embedder_onnx.cpp  embedder_openai.cpp  ignore.cpp  ignore.hpp  job_queue.hpp  librarian.cpp  librarian.hpp  scanner.cpp  scanner.hpp  sha256.cpp  text_chunker.cpp  text_chunker.hpp  tokenizer.hpp  treesitter_parser.cpp  treesitter_parser.hpp
src/mcp/: main.cpp
src/platform/: platform_linux.cpp  platform_macos.cpp  platform_windows.cpp
tests/: mcp_test_client.py  test_database_hybrid.cpp  test_e2e.py  test_mcp.py  test_platform.cpp  test_text_chunker.cpp  test_treesitter_parser.cpp  test_treesitter_python.cpp
